# shadowKit

./: .env.example  .gitignore  Cargo.toml  README.md  justfile  package-lock.json  package.json  rust-toolchain.toml  tsconfig.base.json  vitest.config.ts
agent/: package.json  vitest.config.ts
agent/scripts/: record-cassette.mjs
agent/src/: dataClient.ts  executor.ts  index.ts  logBus.ts  planValidation.ts  planner.ts  prompt.ts  run-e2e.ts  watcher.ts
agent/test/: agentRunner.fallback.test.ts  dataClient.test.ts  deterministicPlanner.test.ts  executor.test.ts  geminiPlanner.cap.test.ts  geminiPlanner.live.test.ts  geminiPlanner.record.test.ts  geminiPlanner.stream.test.ts  logBus.test.ts  planValidation.test.ts  planner.test.ts  prompt.test.ts  runner.test.ts  swapVenueSelect.test.ts  watcher.test.ts
circuits/poseidon-helpers/: poseidon1.circom  poseidon2.circom  poseidon3.circom
circuits/vote/: README.md  merkle.circom  package-lock.json  package.json  poseidon.circom  vitest.config.ts  (+2 more)
contracts/agent-policy/: Cargo.toml
contracts/agent-policy/src/: fallback.rs  lib.rs  policy.rs  test.rs  test_account.rs
contracts/agent-policy/test_snapshots/test/: allow_valid_swap.1.json  cross_read_gate_rejects_when_read_id_unapproved.1.json  cross_read_in_enforce_during_auth.1.json  cross_read_probe_returns_govvault_state.1.json  host_auth_rejects_bad_session_signature.1.json  install_stores_params_with_sa_auth.1.json  install_without_sa_auth_fails.1.json  oz_real_auth_allows_valid_swap.1.json  oz_real_auth_rejects_multi_call.1.json  oz_real_auth_rejects_over_cap_proving_enforce_ran.1.json  params_roundtrip_and_error_codes.1.json  reject_already_executed.1.json  reject_malformed_args.1.json  reject_not_approved.1.json  reject_over_cap.1.json  reject_wrong_asset.1.json  reject_wrong_asset_out.1.json  uninstall_removes_params_with_auth.1.json
contracts/agent-policy/test_snapshots/test/handrolled/: handrolled_allows_valid_swap_with_real_sig.1.json  handrolled_rejects_already_executed.1.json  handrolled_rejects_malformed_args.1.json  handrolled_rejects_multi_call.1.json  handrolled_rejects_not_approved.1.json  handrolled_rejects_over_cap.1.json  handrolled_rejects_wrong_asset_in.1.json  handrolled_rejects_wrong_asset_out.1.json
contracts/agent-policy/test_snapshots/test/integration/: execute_without_quorum_is_blocked.1.json  hero_loop_moves_balances.1.json
contracts/fallback-amm/: Cargo.toml
contracts/fallback-amm/src/: lib.rs  test.rs
contracts/fallback-amm/test_snapshots/test/: test_add_liquidity_updates_reserves.1.json  test_fallback_amm_is_a_swap_venue.1.json  test_swap_constant_product_math.1.json  test_swap_reverse_direction.1.json  test_swap_slippage_revert.1.json  test_swap_unknown_asset_rejected.1.json  test_swap_venue_slippage_through_trait.1.json  test_swap_zero_amount_revert.1.json
contracts/gov-vault/: Cargo.toml
contracts/gov-vault/src/: lib.rs  reveal.rs  storage.rs  test.rs  test_fixtures.rs  test_offchain.rs
contracts/gov-vault/test_snapshots/test/: cast_vote_rejects_commitment_not_bound_to_proof.1.json  cast_vote_stores_full_sealed_vote.1.json  close_and_reveal_before_deadline_rejected.1.json  close_and_reveal_correct_sets_weighted_tally_and_approves.1.json  close_and_reveal_emits_proposalclosed_event_approved.1.json  coordinator_mode_e2e_offchain_aggregate_drives_onchain_approved.1.json  coordinator_reveal_accepts_admin_asserted_aggregate.1.json  double_reveal_rejected.1.json  double_vote_same_nullifier_rejected.1.json  e2e_sealed_to_reveal_to_approved_emits_closed_event.1.json  integration_no_quorum_blocks_execution.1.json  integration_vote_to_approve_flow.1.json  invalid_proof_rejected.1.json  mark_executed_allows_configured_executor.1.json  mark_executed_rejects_non_executor.1.json  onchain_accepts_committed_proof_end_to_end.1.json  onchain_accepts_fresh_prover_proof_end_to_end.1.json  post_deadline_vote_rejected.1.json  proposal_exposes_no_tally_before_close.1.json  proposal_view_hides_tally_before_close.1.json  replay_other_proposal_rejected.1.json  reveal_wrong_commitment_rejected.1.json  sealed_cast_vote_happy_path.1.json  stale_merkle_root_rejected.1.json  test_bad_direction_rejected.1.json  test_cap_of_and_action_of_return_stored_values.1.json  test_cap_of_not_found_panics.1.json  test_cast_vote_emits_votecast_event.1.json  test_close_before_deadline_rejected.1.json  test_close_emits_proposalclosed_event.1.json  test_close_emits_proposalclosed_event_approved.1.json  test_close_quorum_fail_low_participation.1.json  test_close_quorum_fail_no_majority.1.json  test_close_twice_rejected.1.json  test_create_proposal_rejects_amount_over_cap.1.json  test_create_proposal_rejects_past_deadline.1.json  test_create_proposal_sequential_ids.1.json  test_double_vote_same_voter_rejected.1.json  test_ineligible_voter_rejected.1.json  test_init_sets_state.1.json  (+9 more)
contracts/gov-vault/test_snapshots/test/min_path/: cast_vote_min_1p1v_counts_one.1.json  cast_vote_min_double_vote_rejected.1.json  cast_vote_min_replay_other_proposal_rejected.1.json
contracts/gov-vault/test_snapshots/test/primary_reveal_guards/: reveal_bad_direction_rejected.1.json
contracts/gov-vault/test_snapshots/test_offchain/: offchain_verify_accepts_coordinator_authorized_verified_vote.1.json  offchain_verify_cast_vote_stores_commitment_without_proof_binding.1.json  offchain_verify_rejects_unverified_flag.1.json
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/src/: lib.rs  test.rs  vk.rs  vk_min.rs
contracts/swap-venue/: Cargo.toml
contracts/swap-venue/src/: lib.rs  soroswap_adapter.rs
contracts/swap-venue/test_snapshots/soroswap_adapter/test/: adapter_delegates_swap_to_router.1.json  adapter_swap_respects_min_out.1.json
docs/: DESIGN.md
scripts/: copy-zk-artifacts.mjs  demo.sh  demo.test.ts  deploy-demo.sh  deploy-local.sh  deploy-testnet.sh  e2e-hero.sh  gen-web-config.mjs  net-down.sh  net-up.sh  snapshot-fixtures-min.sh  snapshot-fixtures.sh  vitest.config.ts
web/: astro.config.mjs  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
(+165 files in other folders)
