# Cargo.toml — Rust workspace root (foundation §1, §6)
[workspace]
resolver = "2"
members = [
    "contracts/hello-world",
    "contracts/shared",
    "contracts/groth16-verifier",
    "contracts/gov-vault",
    "contracts/agent-policy",
    "contracts/fallback-amm",
    "contracts/swap-venue",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

# foundation §6: standardize the WHOLE workspace on soroban-sdk 26.0.0
[workspace.dependencies]
soroban-sdk = "26.0.0"

# SOURCE: stellar/soroban-examples workspace Cargo.toml (verified raw GitHub 2026-06-02)
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
