# Cargo.toml — Rust workspace root (foundation §1, §6)
[workspace]
resolver = "2"
members = [
    "contracts/hello-world",
    "contracts/shared",
    "contracts/groth16-verifier",
    "contracts/gov-vault",
    "contracts/agent-policy",
    "contracts/fallback-amm",
    "contracts/swap-venue",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

# foundation §6: standardize the WHOLE workspace on soroban-sdk 26.0.0
[workspace.dependencies]
soroban-sdk = "26.0.0"
# The OZ Smart Accounts crate is `stellar-accounts` (NOT `openzeppelin-stellar-contracts`).
# It has NO `accounts` feature — the crate IS the accounts package. Depend on it plainly.
# SOURCE: OpenZeppelin/stellar-contracts packages/accounts/Cargo.toml `name = "stellar-accounts"` (verified 2026-06-02).
stellar-accounts = "0.7.1"
stellar-contract-utils = "0.7.1"   # only if the host needs `upgradeable`; otherwise unused
ed25519-dalek = "2.1.1"            # dev: produce real ed25519 test signatures

# SOURCE: stellar/soroban-examples workspace Cargo.toml (verified raw GitHub 2026-06-02)
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
