[package]
name = "agent-policy"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = []
handrolled = []

[dependencies]
soroban-sdk = { workspace = true }
# The OZ Smart Accounts crate is `stellar-accounts` (NO `accounts` feature; it IS the accounts package).
# SOURCE: packages/accounts/Cargo.toml `name = "stellar-accounts"` (verified 2026-06-02).
stellar-accounts = { workspace = true }
shadowkit-shared = { path = "../shared" }
# gov-vault as rlib so we can generate its contract client for cross-contract reads
gov-vault = { path = "../gov-vault", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-accounts = { workspace = true }   # host + verifier building blocks for the integration test
fallback-amm = { path = "../fallback-amm" }
swap-venue = { path = "../swap-venue" }
ed25519-dalek = { workspace = true }       # real ed25519 signatures in tests
# M4: gov-vault's sealed cast_vote requires a real Groth16 proof; the fixtures load the committed
# circuit proof (same arkworks pattern as gov-vault/groth16-verifier test loaders).
groth16-verifier = { path = "../groth16-verifier" }
ark-bls12-381 = "0.4"
ark-serialize = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
