[package]
name = "fallback-amm"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
swap-venue = { path = "../swap-venue" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
