[package]
name = "groth16-verifier"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[[bin]]
name = "embed_vk"
path = "src/bin/embed_vk.rs"
required-features = ["host-tools"]

[features]
# host-tools enables the off-chain VK byte-array generator (`embed_vk` bin). NOT used by the wasm contract.
host-tools = ["dep:ark-bls12-381", "dep:ark-serialize", "dep:serde", "dep:serde_json"]

[dependencies]
soroban-sdk = { workspace = true }
# Optional host-only deps for the embed_vk generator bin (a [[bin]] cannot use dev-deps).
ark-bls12-381 = { version = "0.4", optional = true }
ark-serialize = { version = "0.4", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Fixture construction EXACTLY as stellar/soroban-examples groth16_verifier/src/test.rs (verified 2026-06-02).
ark-bls12-381 = "0.4"
ark-serialize = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
